adding a few editorial changes

--- a/src/orchid/resources/posts/mathematics/2020-05-03-math-post-0.md
+++ b/src/orchid/resources/posts/mathematics/2020-05-03-math-post-0.md
@@ -8,6 +8,18 @@ tags:
 
 # I hated mathematics for at least 15 years.
 I do not use that amount of time, nor the term hate lightly, though despised or loathed would suffice, if we wanted to take it down a notch, but make no mistake- I had a vendetta against the entire world of numbers. This vendetta was assisted, by the fact, that my natural gift, is in the area of language, and my environment was well suited to support that. My mother was an avid reader, who stressed the importance of literacy, my sister was a librarian, so I was constantly surrounded with things to read (some of which I certainly shouldn't have been reading, but every book looks the same to adults, if you change the book slip out with an appropriate one).
-By the time I was in 4th grade, I had fully committed to the world of words, having found that my verbal prowess conferred me a sort of status, or power, over them, or in their world, alongside the fact that I loved books. There was something about reality that felt (and still does) a bit limited, and boring at times- perhaps I consumed too many video games as a kid, and have a wild fanciful imagination- so when an author crafted a reality that I found truly interesting, it was like a drug hit. I became an fiction* addict.
-I suppose, here is where the hate starts- in 4th grade, I was introduced to poetry, writing, you see, the art of generating words, which was entirely different yet intimately connected to the consumption of words, by the most influential teacher in all of my schooling. She was patient with a kid that was a handful, and showed him he could do something.  In contrast, my math teacher that year, I'll never forget her (nor my homeroom teacher, mentioned above), was the exact opposite. Very much the strict, old-school (minus the paddlings) disciplinarian, she didn't even seem enthusiastic about the prospect of teaching mathematics, let alone to a group of kids. Looking back (though perhaps through rose colored glasses), I hope it was her valuing of mathematical rigor that made her such a drill sergeant about it. It probably wasn't. Either way, I was always in trouble in that class, getting U's (Unsatisfactory) on progress reports, and getting sent to detention. So, at that point, I did what most children do, and associated math with the way that math teacher made me feel, about doing good enough in that class. To save us time, I'll just say this process repeated from 4th grade to 9th grade. Stressed out, underpaid, overworked, frustrated math teachers in underfunded schools, for these and likely other reasons, unable to bring enthusiasm and life to the subject, allowed me to really just check out from the world of numbers entirely. This didn't really hurt me too much, in the sense that, as long as I attained passing, albeit mediocre, scores in mathematics, and excelled in the other areas, English and Science, I could game my way through the school system, by doing good on quarterly & yearly standardized tests. I had checked out of the world of numbers, for good.
-- * most of my reading now is non-fiction, ironically. I suppose I've realized the truth of that old cliche: "Truth is stranger than fiction."
+By the time I was in 4th grade, I had fully committed to the world of words, having found that my verbal prowess conferred me a sort of status among adults, or power, over them, or in their world. Alongside that fact, I simply loved books. There was something about reality that felt (and still does, at times) a bit limited, and boring- perhaps I consumed too many video games as a kid, and have a wild fanciful imagination- either way, when an author crafted a reality, a universe, that I found truly interesting, it was like a drug hit. I became an fiction* addict.
+I suppose, here is where the hate starts- in 4th grade, I was introduced to poetry, writing, you see, the art of generating words, which was entirely different yet intimately connected to the consumption of words, by the most influential teacher in all of my schooling. She was patient with a kid that was a handful, and showed him he could do something.  In contrast, my math teacher that year, I'll never forget her (nor my homeroom teacher, mentioned above), was the exact opposite. Very much the strict, old-school (minus the paddlings) disciplinarian, she didn't even seem enthusiastic about the prospect of teaching mathematics, let alone to a group of kids. Looking back (though perhaps through rose colored glasses), I hope it was her valuing of mathematical rigor that made her such a drill sergeant about it. It probably wasn't. Regardless of the reason, I was always in trouble in that class, getting U's (Unsatisfactory) on progress reports, and getting sent to detention. So, at that point, I did what most children do, and associated math with the way that math teacher made me feel, about *not* doing good enough in that class. To save us time, I'll just say this process repeated from 4th grade to 9th grade. Stressed out, underpaid, overworked, frustrated math teachers in underfunded schools, for these and likely other reasons, unable to bring enthusiasm and life to the subject, allowed me to really just check out from the world of numbers entirely. This didn't really hurt me too much, in the sense that, as long as I attained passing, albeit mediocre, scores in Mathematics, and excelled in the other areas, English and Science, I could game my way through the school system, by doing good on quarterly & yearly standardized tests. I had checked out of the world of numbers, for good. Being bad at math was a part of my personality, one I adopted and cherished, feeling myself the creative, interesting, and entertaining polar opposite of the stiff mathematical types, via poetry and lyrics.
+
+Or so I thought.
+
+Before we continue, I should point out that I did have some wonderful math teachers in high school, and while they didn't succeed in getting me 'into' mathematics, I like to think they softened my heart up to the field, just enough so that when the time was right, years later, I had an opportunity to fall in love with it.
+
+Yes, we have crossed the bridge from hate to love- but how did we do it?
+
+The answer is simple: I became a functional programmer.
+
+I started Lambda School, in the spring of 2018, and the language they teach you to code in, is quite logically, JavaScript. While I've come to appreciate JavaScript for what it does, I quickly realized the language wasn't for me, and what I mean by this is simply, it wasn't the language that mapped accurately onto the way I think about processes- I found myself constantly off beat- the things I expected to work a certain way, thinking logically, didn't, and even more confounding, the things I didn't expect to work *did*.
+
+
+* most of my reading now is non-fiction, ironically. I suppose I've realized the truth of that old cliche: "Truth is stranger than fiction."
