Alright syntax highlighting for Haskell, lets see

--- a/src/orchid/resources/posts/mathematics/2020-05-03-math-post-0.md
+++ b/src/orchid/resources/posts/mathematics/2020-05-03-math-post-0.md
@@ -21,5 +21,17 @@ The answer is simple: I became a functional programmer.
 
 I started Lambda School, in the spring of 2018, and the language they teach you to code in, is quite logically, JavaScript. While I've come to appreciate JavaScript for what it does, I quickly realized the language wasn't for me, and what I mean by this is simply, it wasn't the language that mapped accurately onto the way I think about processes- I found myself constantly off beat- the things I expected to work a certain way, thinking logically, didn't, and even more confounding, the things I didn't expect to work *did*.
 
+I started to wonder about what other programming languages existed, and how they worked. I wondered if there was something out there that resonated with my thought process more. The answers I found were interesting, but perplexing, generally having words like immutable state and static types, and pure functions woven throughout them. I knew that I had to look into this when I had the time, and spent a few weeks or months progressing with JavaScript, conquering old frustrations and meeting new ones, all the while hearing the refrain of Stack Overflow responses in the back of my ear, as if on loop in the dark corners of my mind.
 
+One night, a few months later as I was working on my first to-do app with Bootstrap/React (maybe it was calculator), I was scrolling through Twitter, and spied some of the strangest code I'd ever seen, I didn't know what was going on at all, but I was also instantly fascinated:
+
+```pebble
+{% verbatim %}
+{% highlight language="haskell"}
+module Lib
+    (someFunc
+    ) where
+someFunc :: IO ()
+someFunc = putStrLn "someFunc
+```
 * most of my reading now is non-fiction, ironically. I suppose I've realized the truth of that old cliche: "Truth is stranger than fiction."
