had to end the syntax highlighting

--- a/src/orchid/resources/posts/mathematics/2020-05-03-math-post-0.md
+++ b/src/orchid/resources/posts/mathematics/2020-05-03-math-post-0.md
@@ -33,5 +33,7 @@ module Lib
     ) where
 someFunc :: IO ()
 someFunc = putStrLn "someFunc
+{% endhighlight %}
+{% endverbatim %}
 ```
 * most of my reading now is non-fiction, ironically. I suppose I've realized the truth of that old cliche: "Truth is stranger than fiction."
