--- a/src/orchid/resources/posts/mathematics/2020-05-03-math-post-0.md
+++ b/src/orchid/resources/posts/mathematics/2020-05-03-math-post-0.md
@@ -34,4 +34,4 @@ someFunc :: IO ()
 someFunc = putStrLn "someFunc
 {% endhighlight %}
 ```
-* most of my reading now is non-fiction, ironically. I suppose I've realized the truth of that old cliche: "Truth is stranger than fiction."
+most of my reading now is non-fiction, ironically. I suppose I've realized the truth of that old cliche: "Truth is stranger than fiction."
