Okay, this should be it.

--- a/src/orchid/resources/posts/mathematics/2020-05-03-math-post-0.md
+++ b/src/orchid/resources/posts/mathematics/2020-05-03-math-post-0.md
@@ -25,4 +25,12 @@ I started to wonder about what other programming languages existed, and how they
 
 One night, a few months later as I was working on my first to-do app with Bootstrap/React (maybe it was calculator), I was scrolling through Twitter, and spied some of the strangest code I'd ever seen, I didn't know what was going on at all, but I was also instantly fascinated:
 
+{% highlight language="haskell" %}
+module Lib
+    (someFunc
+    ) where
+someFunc :: IO ()
+someFunc = putStrLn "someFunc
+{% endhighlight %}
+
 most of my reading now is non-fiction, ironically. I suppose I've realized the truth of that old cliche: "Truth is stranger than fiction."
