I don't like this article.

--- a/src/orchid/resources/posts/mathematics/2020-05-03-math-post-0.md
+++ b/src/orchid/resources/posts/mathematics/2020-05-03-math-post-0.md
@@ -33,21 +33,19 @@ someFunc :: IO ()
 someFunc = putStrLn "someFunc"
 {% endhighlight %}
 
-There was more, but these few lines of code were enough to seduce me, and I immediately had to find out what it was. As you've probably guessed by now, it was Haskell, which happens to be a strictly typed, purely functional, and extremely unique language. It was love at first sight. I started learning me a Haskell for great good. I was intoxicated. I could not believe how useful list comprehensions were, how clean guards looked as conditional branches, or how powerful function composition was, but there was something else that really sealed my resolve to become a functional programmer:
+There was more, but these few lines of code were enough to seduce me, and I immediately had to find out what it was. 
+As you've probably guessed by now, it was Haskell, which happens to be a strictly typed, purely functional, and extremely unique language. It was love at first sight. I started learning me a Haskell for great good. I was intoxicated. I could not believe how useful list comprehensions were, how clean guards looked as conditional branches, or how powerful function composition was, but there was something else that really sealed my resolve to become a functional programmer:
 
-## T Y P E S I G N A T U R E S
+## Type Signatures.
 
-{% highlight language="haskell" %}
-    inc :: Integer -> Integer
-{% endhighlight %}
+{% highlight language="haskell" %} inc :: Integer -> Integer {% endhighlight %}
 
 The function inc is of type Integer, meaning it can accept any value so long as it is of the Integer type, as it expects one of those values, and will also return one.
-The number of hours lost that would have been saved if I had've been able to express to my compiler (or interpreter, transpiler, take your pick) the nature, the type I expected a function to be working with, and what order, at every stage of it's execution are too great, to many. I found freedom in this strictness. I was free to define as strictly as I pleased, or as loosely I as pleased, the aforementioned criteria of a function. It was then that I resolved to become a Haskeller, and began studying the language, and all things functional programming, and quickly, two things happened: I realized I had fallen into a rabbit-hole, and that there were things way, way stranger than JavaScript that awaited me on this path. What I didn't realize, at the time, was that my stay at Hotel Haskell, was going to be much shorter than I intended it to be, as I was yet to reach my actual destination.
+The number of hours lost that would have been saved if I had've been able to express to my compiler (or interpreter, transpiler, take your pick) the nature, the type I expected a function to be working with, and what order, at every stage of it's execution are too great, to many. I found freedom in this strictness. I was free to define as strictly as I pleased, or as loosely I as pleased, the aforementioned criteria of a function. It was then that I resolved to become a Haskeller, and began studying the language, and all things functional programming, and quickly, two things happened: I realized I had fallen into a rabbit-hole- that there were things way, way stranger than JavaScript that awaited me on this path, and that, I had entirely broken my personal narrative- I found myself interesti
+Where was the next stop? Well it branches, as the two significant events that took place were Ha
 
-Where was the next stop?
+The answer involves the inspiration behind Haskell's list data structure, which, for a data structure that seemed quite normal, that I had such a long standing relationship with, having used them in HTML, I couldn't have imagined the complexity that underlay this implementation of that data structure, and even more so, I couldn't imagine the simplicity.
+The day programming introduced me to Haskell, is only superseded in importance by the day Haskell introduced me to Lisp. 
 
-The answer involves the inspiration behind Haskell's list data structure, which, for a data structure that seemed quite normal, that I had such a long standing relationship with, having used lists in HTML, I couldn't have imagined the complexity that underlay this implementation of that data structure, and even more so, I couldn't imagine the simplicity.
-The day programming introduced me to Haskell, is only superseded in importance by the day Haskell introduced me to Lisp.
-For a more in depth rendition of those events, stick around for the next post: How I Ended Up Writing Lisp.
-
+This 
 /* most of my reading now is non-fiction, ironically. I suppose I've realized the truth of that old cliche: "Truth is stranger than fiction."
