This revision is much better

--- a/src/orchid/resources/posts/mathematics/2020-05-03-math-post-0.md
+++ b/src/orchid/resources/posts/mathematics/2020-05-03-math-post-0.md
@@ -19,33 +19,4 @@ Yes, we have crossed the bridge from hate to love- but how did we do it?
 
 The answer is simple: I became a functional programmer.
 
-I started Lambda School, in the spring of 2018, and the language they teach you to code in, is quite logically, JavaScript. While I've come to appreciate JavaScript for what it does, I quickly realized the language wasn't for me, and what I mean by this is simply, it wasn't the language that mapped accurately onto the way I think about processes- I found myself constantly off beat- the things I expected to work a certain way, thinking logically, didn't, and even more confounding, the things I didn't expect to work *did*.
-
-I started to wonder about what other programming languages existed, and how they worked. I wondered if there was something out there that resonated with my thought process more. The answers I found were interesting, but perplexing, generally having words like immutable state and static types, and pure functions woven throughout them. I knew that I had to look into this when I had the time, and spent a few weeks or months progressing with JavaScript, conquering old frustrations and meeting new ones, all the while hearing the refrain of Stack Overflow responses in the back of my ear, as if on loop in the dark corners of my mind.
-
-One night, a few months later as I was working on my first to-do app with Bootstrap/React (maybe it was calculator), I was scrolling through Twitter, and spied some of the strangest code I'd ever seen, I didn't know what was going on at all, but I was also instantly fascinated:
-
-{% highlight language="haskell" %}
-module Lib
-    (someFunc
-    ) where
-someFunc :: IO ()
-someFunc = putStrLn "someFunc"
-{% endhighlight %}
-
-There was more, but these few lines of code were enough to seduce me, and I immediately had to find out what it was. 
-As you've probably guessed by now, it was Haskell, which happens to be a strictly typed, purely functional, and extremely unique language. It was love at first sight. I started learning me a Haskell for great good. I was intoxicated. I could not believe how useful list comprehensions were, how clean guards looked as conditional branches, or how powerful function composition was, but there was something else that really sealed my resolve to become a functional programmer:
-
-## Type Signatures.
-
-{% highlight language="haskell" %} inc :: Integer -> Integer {% endhighlight %}
-
-The function inc is of type Integer, meaning it can accept any value so long as it is of the Integer type, as it expects one of those values, and will also return one.
-The number of hours lost that would have been saved if I had've been able to express to my compiler (or interpreter, transpiler, take your pick) the nature, the type I expected a function to be working with, and what order, at every stage of it's execution are too great, to many. I found freedom in this strictness. I was free to define as strictly as I pleased, or as loosely I as pleased, the aforementioned criteria of a function. It was then that I resolved to become a Haskeller, and began studying the language, and all things functional programming, and quickly, two things happened: I realized I had fallen into a rabbit-hole- that there were things way, way stranger than JavaScript that awaited me on this path, and that, I had entirely broken my personal narrative- I found myself interesti
-Where was the next stop? Well it branches, as the two significant events that took place were Ha
-
-The answer involves the inspiration behind Haskell's list data structure, which, for a data structure that seemed quite normal, that I had such a long standing relationship with, having used them in HTML, I couldn't have imagined the complexity that underlay this implementation of that data structure, and even more so, I couldn't imagine the simplicity.
-The day programming introduced me to Haskell, is only superseded in importance by the day Haskell introduced me to Lisp. 
-
-This 
-/* most of my reading now is non-fiction, ironically. I suppose I've realized the truth of that old cliche: "Truth is stranger than fiction."
+It started quite innocently, I was just curious about the programming language paradigms that existed outside of OOP, perusing Google to Stack Overflow, functional programming was the most prevalent alternative, filled with terms like immutable state and referential transparency, which piqued my curiosity quite a bit. For a while, it was something I intended to experiment with, but didn't have the time. Interestingly enough, I was browsing Twitter a few months later, saw a snippet of some code that looked pretty alien, and decided I was going to write whatever that was. Unbeknownst to me, I was preparing to swan dive into a professional grade rabbit hole, because the snippet was Haskell. So, I started LYAHFGG, and was hooked *very* quickly. I wasn't aware of the heavily mathematical underpinnings of the language/paradigm yet, and I'm not sure exactly *when* I did become aware, but in trying to learn as much as I could about Haskell, and with it introducing me to Lisp, via lists, something happened. My process of exploring the origins of things I'm interesting lead me sneakily into the world of mathematics via adjacent concepts, notations, logics, grammars, type systems, and pretty soon I'd shattered my personal narrative- I wasn't the kind of person who cared about mathematical logic, or wanted to learn mathematical notation, and propositional calculus? I didn't want anything to do with anything that had calculus in it's name. Except, I was, and I did, now. 
