--- a/src/orchid/resources/posts/mathematics/2020-05-03-math-post-0.md
+++ b/src/orchid/resources/posts/mathematics/2020-05-03-math-post-0.md
@@ -2,14 +2,19 @@
 title: 'A Second Chance at Mathematics: Part One' 
 featuredImage: 'assets/media/pic03.jpg'
 tags:
-    - logic
-    - lean
 ---
 
 # I hated mathematics for at least 15 years.
 I do not use that amount of time, nor the term hate lightly, though despised or loathed would suffice, if we wanted to take it down a notch, but make no mistake- I had a vendetta against the entire world of numbers. This vendetta was assisted, by the fact, that my natural gift, is in the area of language, and my environment was well suited to support that. My mother was an avid reader, who stressed the importance of literacy, my sister was a librarian, so I was constantly surrounded with things to read (some of which I certainly shouldn't have been reading, but every book looks the same to adults, if you change the book slip out with an appropriate one).
+
 By the time I was in 4th grade, I had fully committed to the world of words, having found that my verbal prowess conferred me a sort of status among adults, or power, over them, or in their world. Alongside that fact, I simply loved books. There was something about reality that felt (and still does, at times) a bit limited, and boring- perhaps I consumed too many video games as a kid, and have a wild fanciful imagination- either way, when an author crafted a reality, a universe, that I found truly interesting, it was like a drug hit. I became an fiction* addict.
-I suppose, here is where the hate starts- in 4th grade, I was introduced to poetry, writing, you see, the art of generating words, which was entirely different yet intimately connected to the consumption of words, by the most influential teacher in all of my schooling. She was patient with a kid that was a handful, and showed him he could do something.  In contrast, my math teacher that year, I'll never forget her (nor my homeroom teacher, mentioned above), was the exact opposite. Very much the strict, old-school (minus the paddlings) disciplinarian, she didn't even seem enthusiastic about the prospect of teaching mathematics, let alone to a group of kids. Looking back (though perhaps through rose colored glasses), I hope it was her valuing of mathematical rigor that made her such a drill sergeant about it. It probably wasn't. Regardless of the reason, I was always in trouble in that class, getting U's (Unsatisfactory) on progress reports, and getting sent to detention. So, at that point, I did what most children do, and associated math with the way that math teacher made me feel, about *not* doing good enough in that class. To save us time, I'll just say this process repeated from 4th grade to 9th grade. Stressed out, underpaid, overworked, frustrated math teachers in underfunded schools, for these and likely other reasons, unable to bring enthusiasm and life to the subject, allowed me to really just check out from the world of numbers entirely. This didn't really hurt me too much, in the sense that, as long as I attained passing, albeit mediocre, scores in Mathematics, and excelled in the other areas, English and Science, I could game my way through the school system, by doing good on quarterly & yearly standardized tests. I had checked out of the world of numbers, for good. Being bad at math was a part of my personality, one I adopted and cherished, feeling myself the creative, interesting, and entertaining polar opposite of the stiff mathematical types, via poetry and lyrics.
+I suppose, here is where the hate starts- in 4th grade, I was introduced to poetry, writing, you see, the art of generating words, which was entirely different yet intimately connected to the consumption of words, by the most influential teacher in all of my schooling. She was patient with a kid that was a handful, and showed him he could do something.  
+
+In contrast, my math teacher that year, I'll never forget her (nor my homeroom teacher, mentioned above), was the exact opposite. Very much the strict, old-school (minus the paddlings) disciplinarian, she didn't even seem enthusiastic about the prospect of teaching mathematics, let alone to a group of kids. Looking back (though perhaps through rose colored glasses), I hope it was her valuing of mathematical rigor that made her such a drill sergeant about it. It probably wasn't. 
+
+Regardless of the reason, I was always in trouble in that class, getting U's (Unsatisfactory) on progress reports, and getting sent to detention. So, at that point, I did what most children do, and associated math with the way that math teacher made me feel, about *not* doing good enough in that class. To save us time, I'll just say this process repeated from 4th grade to 9th grade. Stressed out, underpaid, overworked, frustrated math teachers in underfunded schools, for these and likely other reasons, unable to bring enthusiasm and life to the subject, allowed me to really just check out from the world of numbers entirely. 
+
+This didn't really hurt me too much, in the sense that, as long as I attained passing, albeit mediocre, scores in Mathematics, and excelled in the other areas, English and Science, I could game my way through the school system, by doing good on quarterly & yearly standardized tests. I had checked out of the world of numbers, for good. Being bad at math was a part of my personality, one I adopted and cherished, feeling myself the creative, interesting, and entertaining polar opposite of the stiff mathematical types, via poetry and lyrics.
 
 Or so I thought.
 
@@ -19,4 +24,8 @@ Yes, we have crossed the bridge from hate to love- but how did we do it?
 
 The answer is simple: I became a functional programmer.
 
-It started quite innocently, I was just curious about the programming language paradigms that existed outside of OOP, perusing Google to Stack Overflow, functional programming was the most prevalent alternative, filled with terms like immutable state and referential transparency, which piqued my curiosity quite a bit. For a while, it was something I intended to experiment with, but didn't have the time. Interestingly enough, I was browsing Twitter a few months later, saw a snippet of some code that looked pretty alien, and decided I was going to write whatever that was. Unbeknownst to me, I was preparing to swan dive into a professional grade rabbit hole, because the snippet was Haskell. So, I started LYAHFGG, and was hooked *very* quickly. I wasn't aware of the heavily mathematical underpinnings of the language/paradigm yet, and I'm not sure exactly *when* I did become aware, but in trying to learn as much as I could about Haskell, and with it introducing me to Lisp, via lists, something happened. My process of exploring the origins of things I'm interesting lead me sneakily into the world of mathematics via adjacent concepts, notations, logics, grammars, type systems, and pretty soon I'd shattered my personal narrative- I wasn't the kind of person who cared about mathematical logic, or wanted to learn mathematical notation, and propositional calculus? I didn't want anything to do with anything that had calculus in it's name. Except, I was, and I did, now. 
+It started quite innocently, I was just curious about the programming language paradigms that existed outside of OOP, perusing Google to Stack Overflow, functional programming was the most prevalent alternative, filled with terms like immutable state and referential transparency, which piqued my curiosity quite a bit. For a while, it was something I intended to experiment with, but didn't have the time. Interestingly enough, I was browsing Twitter a few months later, saw a snippet of some code that looked pretty alien, and decided I was going to write whatever that was. Unbeknownst to me, I was preparing to swan dive into a professional grade rabbit hole, because the snippet was Haskell. 
+
+So, I started LYAHFGG, and was hooked *very* quickly. I wasn't aware of the heavily mathematical underpinnings of the language/paradigm yet, and I'm not sure exactly *when* I did become aware, but in trying to learn as much as I could about Haskell, and with it introducing me to Lisp, via lists, something happened. My process of exploring the origins of things I'm interesting lead me sneakily into the world of mathematics via adjacent concepts, notations, logics, grammars, type systems, and pretty soon I'd shattered my personal narrative- I wasn't the kind of person who cared about mathematical logic, or wanted to learn mathematical notation, and propositional calculus? I didn't want anything to do with anything that had calculus in it's name. 
+
+Except, I was, and I did, now. 
