I mean, it's pretty funny.

--- a/src/orchid/resources/posts/miscellaneous/2020-06-11-hst-daily.md
+++ b/src/orchid/resources/posts/miscellaneous/2020-06-11-hst-daily.md
@@ -4,28 +4,29 @@ tags:
     - misc
 ---
 
-* 3 PM - rebase
-* 3:05 - Checksum while merging pulls, Dependency check
-* 3:45 - commits
-* 3:50 - Another Checksum, Dependencies
-* 4:05 - first compile, Dependencies
-* 4:15 - commits
-* 4:16 - obfuscate javascript, Dependencies 
-* 3:30 - commits
-* 4:54 - commits
-* 5:05 - commits
-* 5:11 - compile, Dependencies
-* 5:30 - more integers in the Checksum
-* 5:45 - commits
-* 6 PM - SO to take the edge off
-* 7:05 - Slack
-* for leetcode - Hashtables, two merges, two checkouts, two open source frameworks, a plate of templates, core libraries, a team standup, a double order of O(n^2) recursion, coding challenge, integer coercion, backup file, Dependencies, another Hashtable, commits, and for the ride home, a shell command (a bunch of scripts intended to validate Checksums)
-* 9:00 - serious commits
-* 10:00 - drops database
-* 11:00 - Callbacks, commits, SO
-* 11:30 - commits, etc, etc
-* 12:00 - Homebrew is ready to code
-* 12:05 - 6:00 a.m - Callbacks, commits, SO, Checksums, compiles, Hashtables, class constructors, glue code, Dependencies, obfuscated java, GDPR, continuous project management
-* 6:00 a.m - Hashtag cryptocurrencies, Dual Boots, Frustrate Admin
-* 8:00 - Hibernate
-* 8:20 - Sleep
+### 3 PM - rebase
+### 3:05 - Checksum while merging pulls, Dependency check
+### 3:45 - commits
+### 3:50 - Another Checksum, Dependencies
+### 4:05 - first compile, Dependencies
+### 4:15 - commits
+### 4:16 - obfuscate javascript, Dependencies 
+### 3:30 - commits
+### 4:54 - commits
+### 5:05 - commits
+### 5:11 - compile, Dependencies
+### 5:30 - more integers in the Checksum
+### 5:45 - commits
+### 6 PM - Stack Overflow to take the edge off
+### 7:05 - Slack
+### for launch:
+- Hashtables, two merges, two checkouts, two open source frameworks, a plate of templates, core libraries, a team standup, a double order of O(n^2) recursion, coding challenge, integer coercion, backup files, Dependencies, another Hashtable, commits, and for the ride home, a shell command (a bunch of scripts intended to validate Checksums)
+### 9:00 - serious commits
+### 10:00 - drops database
+### 11:00 - Callbacks, commits, Stack Overflow
+### 11:30 - commits, etc, etc
+### 12:00 - Homebrew is ready to code
+### 12:05 - 6:00 a.m - Callbacks, commits, SO, Checksums, compiles, Hashtables, class constructors, glue code, Dependencies, obfuscated java, GDPR, continuous project management
+### 6:00 a.m - in the hyper text - Crypto, Dual Boots, File Association
+### 8:00 - Hibernate
+### 8:20 - Sleep
